--- a/gemspec.yml
+++ b/gemspec.yml
@@ -7,7 +7,7 @@ email: postmodern.mod3@gmail.com
 homepage: http://github.com/sophsec/ffi-libnet
 has_yard: true
 
-requirements: libnet
+requirements: libnet >= 1.0.0
 
 dependencies:
   ffi: ~> 1.0
